--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "notiflow",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "A lightweight React notification/toast system with hooks & context",
   "main": "dist/index.js",
   "module": "dist/index.mjs",
@@ -17,19 +17,26 @@
   ],
   "scripts": {
     "build": "tsup src/index.ts --format esm,cjs --dts --tsconfig tsconfig.build.json",
-    "build:types": "tsc -p tsconfig.build.json"
+    "build:types": "tsc -p tsconfig.build.json",
+    "test": "vitest",
+    "test:unit": "vitest run"
   },
   "peerDependencies": {
     "react": "^18.0.0 || ^19.0.0",
     "react-dom": "^18.0.0 || ^19.0.0"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.9.1",
+    "@testing-library/react": "^16.3.1",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
+    "@types/testing-library__react": "^10.0.1",
+    "jsdom": "^27.4.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "tsup": "^8.5.0",
-    "typescript": "~5.8.3"
+    "typescript": "~5.8.3",
+    "vitest": "^4.0.16"
   },
   "keywords": [
     "react",
